objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Contact_ID_18__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact ID (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBConnect__D_B_Connect_Company_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Upon a successful match, D&amp;B Connect populates this field that links the Contact record to a specific D-U-N-S Number for display of a custom object with D&amp;B data.</description>
        <inlineHelpText>Upon a successful match, D&amp;B Connect populates this field that links the Contact record to a specific D-U-N-S Number for display of a custom object with D&amp;B data.</inlineHelpText>
        <label>D&amp;B Connect Company Profile</label>
        <referenceTo>DNBConnect__D_B_Connect_Company_Profile__c</referenceTo>
        <relationshipLabel>DBConnectContactCompanyProfile</relationshipLabel>
        <relationshipName>DBConnectContactCompanyProfile</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNBConnect__D_B_Connect_Contact_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Upon a successful Contact match, D&amp;B Connect populates this field that links the Contact record to a specific Contact ID for display of a custom object with D&amp;B data.</description>
        <inlineHelpText>Upon a successful Contact match, D&amp;B Connect populates this field that links the Contact record to a specific Contact ID for display of a custom object with D&amp;B data.</inlineHelpText>
        <label>D&amp;B Connect Contact Profile</label>
        <referenceTo>DNBConnect__D_B_Connect_Contact_Profile__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNBConnect__D_B_Contact_Match_Driver__c</fullName>
        <description>The driver explaining how the resulting match was found.
Possible values include:
Contact ID Lookup
Email Lookup
Company + Contact Match
Company Family + Contact Match
Company Only Match</description>
        <inlineHelpText>The driver explaining how the resulting match was found.
Possible values include:
Contact ID Lookup
Email Lookup
Company + Contact Match
Company Family + Contact Match
Company Only Match</inlineHelpText>
        <label>D&amp;B Contact Match Driver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBConnect__D_B_Match_Confidence_Code__c</fullName>
        <description>A numeric value from 1 (low) up to 10 (high) indicating the level of certainty at which this possible candidate was included in this result set.</description>
        <inlineHelpText>A numeric value from 1 (low) up to 10 (high) indicating the level of certainty at which this possible candidate was included in this result set.</inlineHelpText>
        <label>D&amp;B Match Confidence Code</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNBConnect__D_B_Match_Data_Profile__c</fullName>
        <description>The information that the matching process used to arrive at a match in addition to the application&apos;s business rules and parameters specified by the requestor. This is a 28-byte string consisting of 14 components of 2 bytes each. The 14 components are, in order, Name, Street Number, Street Name, Town Name, Territory Name, P.O. Box, Telephone, Post Code, D-U-N-S Number, Industry Code, Geographical Density, Location Uniqueness, Registration Number and URL.</description>
        <inlineHelpText>The information that the matching process used to arrive at a match in addition to the application&apos;s business rules and parameters specified by the requestor. This is a 28-byte string consisting of 14 components of 2 bytes each. The 14 components are, in order, Name, Street Number, Street Name, Town Name, Territory Name, P.O. Box, Telephone, Post Code, D-U-N-S Number, Industry Code, Geographical Density, Location Uniqueness, Registration Number and URL.</inlineHelpText>
        <label>D&amp;B Match Data Profile</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBConnect__D_B_Match_Grade__c</fullName>
        <description>The compound rating that comprises one rating per type of data scored by a match engine. For example, in AABZBAAAFBZ the &quot;A&quot;; in the 1st position means that the Name scored between 80-100 and the &quot;A&quot;; in the 2nd position means that the Street Number had to score exactly 100. For more details, please see the Identity Resolution guide.</description>
        <inlineHelpText>The compound rating that comprises one rating per type of data scored by a match engine. For example, in AABZBAAAFBZ the &quot;A&quot;; in the 1st position means that the Name scored between 80-100 and the &quot;A&quot;; in the 2nd position means that the Street Number had to score exactly 100. For more details, please see the Identity Resolution guide.</inlineHelpText>
        <label>D&amp;B Match Grade</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBConnect__D_B_Match_Type__c</fullName>
        <description>The type of match performed to identify the identified entity. May be one of the following:
DUNS Number Lookup: D-U-N-S Number was used to perform match.
Name and Address Lookup: Name and Address were used to perform match.
National ID Lookup: Registration Number was used to perform match.
Telephone Number Lookup: Telephone Number was used to perform match.
ZIP Code Lookup: Postal Code was used to perform match.
Note: This parameter is not applicable for Multi-Process High-Volume Match.</description>
        <inlineHelpText>The type of match performed to identify the identified entity. May be one of the following:
DUNS Number Lookup: D-U-N-S Number was used to perform match.
Name and Address Lookup: Name and Address were used to perform match.
National ID Lookup: Registration Number was used to perform match.
Telephone Number Lookup: Telephone Number was used to perform match.
ZIP Code Lookup: Postal Code was used to perform match.
Note: This parameter is not applicable for Multi-Process High-Volume Match.</inlineHelpText>
        <label>D&amp;B Match Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBConnect__D_B_Name_Match_Score__c</fullName>
        <description>A number from -1 to 100 (including decimals) that indicates the detailed level of match on the name of the matched candidate.
0 indicates no match.
100 indicates most accurate match.
Note: This parameter is not applicable for Multi-Process High-Volume Match.</description>
        <inlineHelpText>A number from -1 to 100 (including decimals) that indicates the detailed level of match on the name of the matched candidate.
0 indicates no match.
100 indicates most accurate match.
Note: This parameter is not applicable for Multi-Process High-Volume Match.</inlineHelpText>
        <label>D&amp;B Name Match Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNBConnect__matchedDuns__c</fullName>
        <description>This field can be different from the D-U-N-S value held in the custom object. Refer to the Match Driver field for more details on how this record was matched.</description>
        <inlineHelpText>This field can be different from the D-U-N-S value held in the custom object. Refer to the Match Driver field for more details on how this record was matched.</inlineHelpText>
        <label>Matched D-U-N-S</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Company_ID__c</fullName>
        <label>ZoomInfo Company ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Enrich_Status__c</fullName>
        <label>ZoomInfo Enrich Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enriched</fullName>
                </value>
                <value>
                    <fullName>No Match</fullName>
                </value>
                <value>
                    <fullName>Company Enriched Only</fullName>
                </value>
                <value>
                    <fullName>Not Enriched - Not Under Management</fullName>
                </value>
                <value>
                    <fullName>Error Occurred in Scheduled Enrich</fullName>
                </value>
                <value>
                    <fullName>Error Occurred in Instant Enrich</fullName>
                </value>
                <value>
                    <fullName>Insufficient Credits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_First_Updated__c</fullName>
        <description>Date and time when the record was first created or updated by ZoomInfo</description>
        <label>ZoomInfo First Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Id__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo Contact ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_InboxAI_ID__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo InboxAI ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Last_Updated__c</fullName>
        <description>Date and time when the record was last created or updated by ZoomInfo</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Non_Matched_Reason__c</fullName>
        <label>ZoomInfo Non-Matched Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Sync_to_Marketo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Sync to Marketo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Associate</fullName>
                </value>
                <value>
                    <fullName>C-Level Executive</fullName>
                </value>
                <value>
                    <fullName>Coordinator</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>President/Vice President</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Add_to_Nurture__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This purpose of this field is to allow a contact record to be marked to be added to a nurture program. Marketo will watch for this field and when set to true auto-add to the nurture campaign.</description>
        <inlineHelpText>If checked, allows a contact record to be marked to be added to a Marketo nurture program.</inlineHelpText>
        <label>Add to Nurture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Asset_URL__c</fullName>
        <description>Receives URL value from Marketo</description>
        <label>Asset URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L2O_Client_Communication_Recipient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Need information on this field</description>
        <label>Client Communication Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Communication_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If marked &quot; True&quot; the Contact does not want to receive emails</description>
        <label>Communication Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Communication_Strategies__c</fullName>
        <label>Communication Strategies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Survey Contact</fullName>
                </value>
                <value>
                    <fullName>Health Matters Member Connect</fullName>
                </value>
                <value>
                    <fullName>Health Matters Standard</fullName>
                </value>
                <value>
                    <fullName>Health Matters Custom</fullName>
                </value>
                <value>
                    <fullName>Health Matters International</fullName>
                </value>
                <value>
                    <fullName>Webinar Info</fullName>
                </value>
                <value>
                    <fullName>Client Summit</fullName>
                </value>
                <value>
                    <fullName>Client Council</fullName>
                </value>
                <value>
                    <fullName>Receive Gift</fullName>
                </value>
                <value>
                    <fullName>Receive Holiday Card</fullName>
                </value>
                <value>
                    <fullName>Case of the Month</fullName>
                </value>
                <value>
                    <fullName>Referral Contact</fullName>
                </value>
                <value>
                    <fullName>Forum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Contact_AQL_Date__c</fullName>
        <description>Date of Lead Conversion</description>
        <label>AQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2O_Contact_Lead_source_detail_other__c</fullName>
        <description>Describe more information about the Lead Source</description>
        <label>Lead source detail other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Contact_Status__c</fullName>
        <description>Status of the Contact</description>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Irrelevant Contact - Not Useful to Teladoc</fullName>
                </value>
                <value>
                    <fullName>Inactive - Left Company</fullName>
                </value>
                <value>
                    <fullName>Inactive - Transfer</fullName>
                </value>
                <value>
                    <fullName>Inactive - Retired</fullName>
                </value>
                <value>
                    <fullName>Inactive - Deceased</fullName>
                </value>
                <value>
                    <fullName>Contact Data - Incorrect Number (wrong person)</fullName>
                </value>
                <value>
                    <fullName>Contact Data - Bad Number (can&apos;t connect)</fullName>
                </value>
                <value>
                    <fullName>Contact Data - Invalid Email</fullName>
                </value>
                <value>
                    <fullName>Company out of Business</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Date_Sales_Accepted__c</fullName>
        <label>SAL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2O_Date_Sales_Converted__c</fullName>
        <description>Date/Time Contact was converted to a Lead</description>
        <label>Date Sales Converted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2O_Email_2__c</fullName>
        <description>Secondary email address for Contract</description>
        <inlineHelpText>Enter the Secondary Email Address for Contract</inlineHelpText>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>L2O_First_Group__c</fullName>
        <description>Date when contact is first marked as a marketing site user.</description>
        <inlineHelpText>Date when contact is first marked as a marketing site user.</inlineHelpText>
        <label>First Group</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_Group_Count__c</fullName>
        <description>Calculated nightly during msu file generation.</description>
        <label>Group Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Industry__c</fullName>
        <description>Industry in which contact works.</description>
        <inlineHelpText>Industry in which contact works.</inlineHelpText>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Healthcare - Administrative</fullName>
                </value>
                <value>
                    <fullName>Healthcare - Clinical</fullName>
                </value>
                <value>
                    <fullName>Healthcare - IT/IS</fullName>
                </value>
                <value>
                    <fullName>Healthcare - Telehealth</fullName>
                </value>
                <value>
                    <fullName>Ambulatory</fullName>
                </value>
                <value>
                    <fullName>Home Health/Hospice</fullName>
                </value>
                <value>
                    <fullName>Long-Term Care</fullName>
                </value>
                <value>
                    <fullName>Other Healthcare</fullName>
                </value>
                <value>
                    <fullName>Telehealth/Telemedicine Company</fullName>
                </value>
                <value>
                    <fullName>Investment/Financial Services</fullName>
                </value>
                <value>
                    <fullName>Consulting Services</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_IsBouncedEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invalid email address provided</description>
        <label>Is Bounced Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Job_Function__c</fullName>
        <description>Contact&apos;s job function</description>
        <inlineHelpText>Contact&apos;s job function</inlineHelpText>
        <label>Job Function</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Other Practitioner</fullName>
                </value>
                <value>
                    <fullName>Marketing/PR</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>Marketplace</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Payvider</fullName>
                </value>
                <value>
                    <fullName>Associate</fullName>
                    <isActive>false</isActive>
                    <label>Associate</label>
                </value>
                <value>
                    <fullName>C-Level Executive</fullName>
                    <isActive>false</isActive>
                    <label>C-Level Executive</label>
                </value>
                <value>
                    <fullName>Coordinator</fullName>
                    <isActive>false</isActive>
                    <label>Coordinator</label>
                </value>
                <value>
                    <fullName>Director</fullName>
                    <isActive>false</isActive>
                    <label>Director</label>
                </value>
                <value>
                    <fullName>Manager</fullName>
                    <isActive>false</isActive>
                    <label>Manager</label>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
                <value>
                    <fullName>President/Vice President</fullName>
                    <isActive>false</isActive>
                    <label>President/Vice President</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Last_Referral_Date__c</fullName>
        <label>Last Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Lead_Gen_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the Object Lead Owner field.</description>
        <label>Lead Gen Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Lead_Id__c</fullName>
        <label>Lead Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Lead_Source_Detail__c</fullName>
        <description>More information about where the lead came from</description>
        <label>Lead Source Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Web Chat</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Event - Sponsored</fullName>
                </value>
                <value>
                    <fullName>Paid - Display</fullName>
                </value>
                <value>
                    <fullName>Paid - Search</fullName>
                </value>
                <value>
                    <fullName>Paid - Social</fullName>
                </value>
                <value>
                    <fullName>Third Party Acquired</fullName>
                </value>
                <value>
                    <fullName>Web Form</fullName>
                </value>
                <value>
                    <fullName>Webinar - Hosted</fullName>
                </value>
                <value>
                    <fullName>Webinar - Sponsored</fullName>
                </value>
                <value>
                    <fullName>Event - Hosted</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>TPA</fullName>
                </value>
                <value>
                    <fullName>Benefit Consultant</fullName>
                </value>
                <value>
                    <fullName>Referral Agent</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Podcast</fullName>
                </value>
                <value>
                    <fullName>Press Release</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                    <isActive>false</isActive>
                    <label>Chat</label>
                </value>
                <value>
                    <fullName>Email - Inbound</fullName>
                    <isActive>false</isActive>
                    <label>Email - Inbound</label>
                </value>
                <value>
                    <fullName>Email - Outbound</fullName>
                    <isActive>false</isActive>
                    <label>Email - Outbound</label>
                </value>
                <value>
                    <fullName>Event / Tradeshow</fullName>
                    <isActive>false</isActive>
                    <label>Event / Tradeshow</label>
                </value>
                <value>
                    <fullName>Hosted Event</fullName>
                    <isActive>false</isActive>
                    <label>Hosted Event</label>
                </value>
                <value>
                    <fullName>Inbound Call</fullName>
                    <isActive>false</isActive>
                    <label>Inbound Call</label>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Nurture</fullName>
                    <isActive>false</isActive>
                    <label>Nurture</label>
                </value>
                <value>
                    <fullName>Paid Advertising (includes Social)</fullName>
                    <isActive>false</isActive>
                    <label>Paid Advertising (includes Social)</label>
                </value>
                <value>
                    <fullName>Telemarketing</fullName>
                    <isActive>false</isActive>
                    <label>Telemarketing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the Lead Object</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Legacy_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for Data migration mapping to Legacy Orgs</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_Linkedin_Profile__c</fullName>
        <description>Link to social Media page</description>
        <label>Linkedin Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L2O_MQL_Date__c</fullName>
        <description>Lead Conversion MQL Date</description>
        <label>MQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2O_Microsoft_Involved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates Microsoft involvement</description>
        <inlineHelpText>Check to indicate Microsoft involvement</inlineHelpText>
        <label>Microsoft Involved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Next_Steps_Comments__c</fullName>
        <description>Guidance on what needs to be done next for the Contact</description>
        <label>Next Steps/Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2O_Next_Steps_Notes__c</fullName>
        <label>Next Steps / Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>L2O_Opt_in_to_B2B_Communication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox marked &quot;True&quot; if Contact would like Marketing emails</description>
        <label>Opt in to B2B Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Referencing_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referencing Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Referral_Notes__c</fullName>
        <label>Referral Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2O_Referral_Tier__c</fullName>
        <label>Referral Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2O_Referral_Tier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referral?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Synch_to_Marketo_Nurture__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for marketing automation (Marketo) synchronization</description>
        <inlineHelpText>Used for marketing automation (Marketo) synchronization</inlineHelpText>
        <label>Synch to Marketo Nurture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Unsubscribe_Events_and_Webinars__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark checkbox to &quot;True&quot; if Contact does not want to receive communications for Events and Webinars</description>
        <label>Unsubscribe Events and Webinars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Unsubscribe_Newsletters__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark checkbox to &quot;True&quot; if Contact does not want to receive communications for Newsletters</description>
        <label>Unsubscribe Newsletters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Unsubscribe_Product_Annoucement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unsubscribe Product  Annoucement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Unsubscribe_Product_Announcement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark checkbox to &quot;True&quot; if Contact does not want to receive communications for Product Announcements</description>
        <label>Unsubscribe Product Announcement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Unsubscribe_Promo_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark checkbox to &quot;True&quot; if Contact does not want to receive communications for Product Content</description>
        <label>Unsubscribe Promo Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Unsync_from_SFDC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark checkbox to &quot;True&quot; if Contact does not want to receive communications for SFDC</description>
        <inlineHelpText>To prevent orphan leads and contacts in MKTO</inlineHelpText>
        <label>Unsync from SFDC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_account_status__c</fullName>
        <label>Account Status</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_office_location_name__c</fullName>
        <label>Office Location Name</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the contact</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>